--- a/poc/quiz/templates/quiz/recommendationsTest.css
+++ b/poc/quiz/templates/quiz/recommendationsTest.css
@@ -18,7 +18,7 @@
 }
 
 .sidenav { 
-    min-height: calc(100% - 100px);
+    height: calc(100% - 100px);
     width: 220px;
     position: absolute;
     z-index: 1;
@@ -26,6 +26,7 @@
     left: 0;
     padding-top: 20px;
     border-right: 5px solid #EEEEEE;
+    overflow: scroll;
 
 }
 .sidenav a {
